# crypto-interp

./: .gitignore  README.md  pyproject.toml  research_directions.md
crypto_interp/: README.md  __init__.py
crypto_interp/analysis/: __init__.py  ablation_delta.py  ablation_full.py  bifurcation.py  check_grokking.py  cliff_vs_commit.py  delta_spectrum.py  dmlp_sweep.py  embedding_patch.py  embedding_residual.py  error_localization.py  fourier2d.py  lattice_variation.py  margin_analysis.py  neuron_clusters.py  noise_decomposition.py  theory_trajectory.py  token_localization.py  verify_helper_mechanism.py  vestigial_ablation.py
crypto_interp/data/: __init__.py  add.py  io.py  mul.py  sqrt.py
crypto_interp/interp/: __init__.py  ablate.py  activations.py  bases.py  cache.py  dynamics.py  grids.py  harmonic.py  hooks.py  interventions.py  load.py  metrics.py  neurons.py  patching.py  reductions.py  session.py  theory.py
crypto_interp/models/: __init__.py
crypto_interp/playbooks/: README.md  basis_discovery.md  causal_intervention.md  economy_analysis.md  grokking_dynamics.md  lattice_variation.md  mechanism_verification.md  population_aggregation.md
crypto_interp/reference/: __init__.py
crypto_interp/training/: __init__.py  config.py  loop.py  sweep.py
experiments/: ANALYSES.md
notes/: Makefile  main.tex  preamble.tex  refs.bib
scripts/: import_drive_sweep.py  run_lattice_analysis.sh  sweep.py  train.py
tests/: conftest.py  test_ablate_metrics.py  test_bases.py  test_dynamics.py  test_folding.py  test_harness_smoke.py  test_realrun.py  test_reductions.py
(+94 files in other folders)
