[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_interp"
version = "0.1.0"
description = "Mechanistic interpretability of cryptographically-important algorithms learned by small transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "einops",
    "matplotlib",
    "jaxtyping",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["crypto_interp*"]
exclude = ["experiments*", "scripts*", "notes*", "papers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
